# SENTINEL-BOTIA

botia_5m_v3/: .gitignore  OPERATIONS.md  README.md  STATUS.md  config.yml  pyproject.toml
botia_5m_v3/scripts/: run_doctor.sh  run_paper.sh  tail_logs.sh
botia_5m_v3/src/botia5m/: adapters.py  cli.py  config.py  data_clients.py  doctor.py  engine.py  heartbeat.py  interfaces.py  logging_utils.py  storage.py
botia_5m_v3/stubs/4coinsbot-main/: order_executor.py  redeem.py  safety_guard.py
botia_5m_v3/stubs/collectmarkets2-main/: copy_source.py
botia_5m_v3/stubs/mlmodelpoly-main/: edge_engine.py  market_ref_tracker.py  normalize_updown.py
